// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom config 1`] = `
Object {
  "context": "./src/custom-folder/models/context.ts:Context",
  "language": "typescript",
  "models": Object {
    "files": Array [
      "./src/custom-folder/models/**.ts",
    ],
  },
  "output": "./src/custom-folder/__generated_custom__/graphqlgen.ts",
  "resolver-scaffolding": Object {
    "layout": "file-per-type",
    "output": "./src/custom-folder/__generated_custom__/tmp-resolvers",
  },
  "schema": "./src/custom-folder/schemas/**.graphql",
  "schema-output": "./src/custom-folder/__generated_custom__/schema.graphql",
}
`;

exports[`Default config 1`] = `
Object {
  "context": "./src/graphql/models/context.ts:Context",
  "language": "typescript",
  "models": Object {
    "files": Array [
      "./src/graphql/models/**.ts",
    ],
  },
  "output": "./src/graphql/__generated__/graphqlgen.ts",
  "resolver-scaffolding": Object {
    "layout": "file-per-type",
    "output": "./src/graphql/__generated__/tmp-resolvers",
  },
  "schema": "./src/graphql/schemas/**.graphql",
  "schema-output": "./src/graphql/__generated__/schema.graphql",
}
`;
